Removed whitespace watermark fixed the size of the plus, minus button

--- a/sass/components/content/_videos-page.scss
+++ b/sass/components/content/_videos-page.scss
@@ -1,98 +1,52 @@
 .videos-page {    
-    .modal {
-    
-    display: none;
-    
-    position: fixed;
-    
-    top: 50%;
-    
-    left: 50%;
-    
-    transform: translate(-50%, -50%);
-    
-    width: 100%;
-    
-    height: 100%;
-    
-    background: rgba(0, 0, 0, 0.5); /* Dark background */
-    
-    z-index: 1000;
-    
+    .modal { 
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); 
+        z-index: 1000;
     }
     
     .modal.open {
-    
-    display: flex;
-    
-    justify-content: center;
-    
-    align-items: center;
-    
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     
     .modal-inner {
-    
-    position: relative;
-    
-    background:transparent;
-    
-    padding: 0; /* Remove padding to ensure full video space */
-    
-    width: 100%; /* Full width of the screen */
-    
-    height: 100%; /* Full height of the screen */
-    
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    
-    display: flex;
-    
-    justify-content: center;
-    
-    align-items: center;
-    
-    overflow: hidden; /* Prevent overflow of the video */
-    
+        position: relative;
+        background:transparent;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden; 
     }
     
       
-    
-    /* Make iframe/video fill the modal */
-    
     .modal-inner iframe,
-    
     .modal-inner video {
-    
-    width: 95vw; 
-    
-    height: 50vh; 
-    
-    border: none;
-    
-    object-fit: cover; 
-    
+        width: 95vw; 
+        height: 50vh; 
+        border: none;
+        object-fit: cover; 
     }
-    
-      
-    
-    /* Close button style */
     
     .modal .close {
-    
-    position: absolute;
-    
-    top: 40px;
-    
-    right: 10px;
-    
-    font-size: 24px;
-    
-    font-weight: bold;
-    
-    cursor: pointer;
-    
-    color: #fff;
-    
+        position: absolute;
+        top: 6rem;
+        right: 10px;
+        font-size: 2rem;
+        font-weight: 300;
+        cursor: pointer;
+        color: #fff;
     }
     
     }
@@ -103,6 +57,10 @@
             .modal-inner video {
                 width: 70vw; 
                 height: 70vh; 
+            }
+
+            .modal .close{
+                top: 3rem;
             }
         }
 
